[gd_scene load_steps=10 format=3 uid="uid://dt6h6aqryy1q"]

[ext_resource type="Script" uid="uid://bugyjantshldd" path="res://scripts/game.gd" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://chfs842827ydh" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://bql3go7a0emyf" path="res://scenes/hazzard.tscn" id="2_yqjtg"]
[ext_resource type="Texture2D" uid="uid://c4py8j31lcbch" path="res://sprites/background.png" id="3_iywne"]
[ext_resource type="Shader" uid="uid://bh6akjdl8isfv" path="res://scroll.gdshader" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://bgb3liga3cg5m" path="res://scenes/ui.tscn" id="4_lbhrr"]
[ext_resource type="AudioStream" uid="uid://b6nq6k4qjucm4" path="res://sounds/music.mp3" id="7_u5sy4"]
[ext_resource type="AudioStream" uid="uid://dscwhd45d6b51" path="res://sounds/levelup.wav" id="8_gee14"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u5sy4"]
shader = ExtResource("3_p57ef")
shader_parameter/speed = 0.1

[node name="Game" type="Node"]
script = ExtResource("1_lnu2h")
hazzard_scene = ExtResource("2_yqjtg")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_u5sy4")
offset_right = 800.0
offset_bottom = 480.0
texture = ExtResource("3_iywne")

[node name="Player" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(200, 240)

[node name="UI" parent="." instance=ExtResource("4_lbhrr")]

[node name="HazzardTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_u5sy4")

[node name="LevelPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gee14")

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="HazzardTimer" to="." method="_on_rock_timer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
